# a2a-maf-workflow

./: .dockerignore  .env.sample  .gitignore  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
infra/: .gitignore  README.md  main.tf  outputs.tf  variables.tf  versions.tf
infra/terraform/: README.md  main.tf  outputs.tf  providers.tf  variables.tf  versions.tf
scripts/: deploy-agents.sh  deploy-infra.sh  wait_for_agents.py
src/agents/: workflow.py  workflow_mcp.py
src/agents/common/: a2a_hosting.py  azure_ai.py  mcp_hosting.py  telemetry.py  text.py
src/agents/reviewer/: Dockerfile  main.py
src/agents/writer/: Dockerfile  main.py
